src/main/java/com/example/tms/error/NoSuchUserException.java
package com.example.tms.error;

public class NoSuchUserException extends RuntimeException {
    public NoSuchUserException(String message) {
        super(message);
    }
}
